# myCobotCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-single-platform.yml
USB-listings.md/: USB Single Serial Intel macOS.md
docs/: SERIAL-SIM.md  TODO.md
inc/: linux_utilities.h  macos_utilities.h  myCobot.h  myCobotCommands.h  myCobotComms.h  myCobotSimple.h  pseudo_port_test.h  utilities.h
py/: leds.py
src/: linux_utilities.cpp  macos_utilities.cpp  main.cpp  myCobot.cpp  myCobotComms.cpp  myCobotSimple.cpp  pseudo_port_test.cpp  utilities.cpp
tests/: CMakeLists.txt  test_main.cpp  test_myCobot.cpp  test_myCobot_doctest.cpp
